RESOLVED FIXED81837
Web Inspector: [chromium] IndexedDB transaction is not closed when requesting data.
https://bugs.webkit.org/show_bug.cgi?id=81837
Summary Web Inspector: [chromium] IndexedDB transaction is not closed when requesting...
Vsevolod Vlasov
Reported 2012-03-21 15:26:06 PDT
IDBCursorBackendInterface::postSuccessHandlerCallback() call is missing in onSuccess callback.
Attachments
Patch (1.51 KB, patch)
2012-03-21 15:29 PDT, Vsevolod Vlasov
no flags
Vsevolod Vlasov
Comment 1 2012-03-21 15:27:55 PDT
This is happens in chromium only because of the cached prefetches feature. This could not be currently tested because this feature is not available in chromium DumpRenderTree.
Vsevolod Vlasov
Comment 2 2012-03-21 15:29:02 PDT
Joshua Bell
Comment 3 2012-03-21 15:39:59 PDT
Thanks for tracking this down - lgtm!
WebKit Review Bot
Comment 4 2012-03-21 23:53:23 PDT
Comment on attachment 133126 [details] Patch Clearing flags on attachment: 133126 Committed r111654: <http://trac.webkit.org/changeset/111654>
WebKit Review Bot
Comment 5 2012-03-21 23:53:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.