Web Inspector: IndexedDB transaction is not closed when requesting data. https://bugs.webkit.org/show_bug.cgi?id=81837

Reviewed by Pavel Feldman.

* inspector/InspectorIndexedDBAgent.cpp: Added missing IDBCursorBackendInterface::postSuccessHandlerCallback() call.
(WebCore):


git-svn-id: svn://svn.chromium.org/blink/trunk@111654 bbb929c8-8fbe-4397-9dbb-9b2b20218538