third_party/WebKit/Source/WebCore/inspector/InspectorIndexedDBAgent.cpp
@@ -457,6 +457,7 @@ public:
     {
         ExceptionCode ec = 0;
         m_idbCursor->continueFunction(0, this, ec);
+        m_idbCursor->postSuccessHandlerCallback();
         m_idbTransaction->didCompleteTaskEvents();
     }
 
@@ -465,6 +466,7 @@ public:
         if (!m_frontendProvider->frontend())
             return;
 
+        m_idbCursor->postSuccessHandlerCallback();
         m_idbTransaction->didCompleteTaskEvents();
 
         switch (m_cursorType) {
